# simple-pomodoro

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
packaging/: simple-pomodoro.spec
src/pomodoro/: __init__.py  __main__.py  app.py  config.py  controller.py  formatting.py  model.py  notifier.py
src/pomodoro/ui/: __init__.py  circular_timer.py  main_window.py
tests/: conftest.py  test_config.py  test_controller.py  test_formatting.py  test_model.py  test_ui.py
