[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-pomodoro"
version = "0.1.0"
description = "A simple, extensible Pomodoro timer for Windows built with PyQt6"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "MasakiTakano" }]
dependencies = [
    "PyQt6>=6.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "pyinstaller>=6.0",
    "PyQt6-stubs>=6.0; python_version < '4.0'",
]

[project.gui-scripts]
simple-pomodoro = "pomodoro.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pomodoro"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]
# 注: warn_unreachable はあえて無効にしている。notifier.py の `sys.platform`
# による分岐と競合し、mypy が解析する単一 OS では必ずどちらかの分岐が静的に
# 到達不能と判定されてしまうため。
pretty = true

[[tool.mypy.overrides]]
module = ["pytestqt.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest / coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=pomodoro --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["pomodoro"]
omit = ["src/pomodoro/__main__.py"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
